Added a title and changed window size geometry

--- a/client/index.html
+++ b/client/index.html
@@ -22,6 +22,7 @@
 </head>
 
 <body>
+
   <div class="whole">
     <div id="guess-all-modal" class="modal" tabindex="-1" role="dialog">
       <div class="modal-dialog" role="document">
@@ -44,6 +45,10 @@
       </div>
     </div>
 
+    <header>
+      <h1 class="title">Hangman!</h1>
+
+    </header>
     <div class="image-view" id="barracks">
       <svg id="drawing">
       </svg>
@@ -65,32 +70,32 @@
 
     <div tabindex="-1" class="info">Click a letter to guess: </div>
     <div id="letters">
-      <input type="button" class="btn btn-warning letter" id="a-letter" value="a" />
-      <input type="button" class="btn btn-warning letter" id="b-letter" value="b" />
-      <input type="button" class="btn btn-warning letter" id="c-letter" value="c" />
-      <input type="button" class="btn btn-warning letter" id="d-letter" value="d" />
-      <input type="button" class="btn btn-warning letter" id="e-letter" value="e" />
-      <input type="button" class="btn btn-warning letter" id="f-letter" value="f" />
-      <input type="button" class="btn btn-warning letter" id="g-letter" value="g" />
-      <input type="button" class="btn btn-warning letter" id="h-letter" value="h" />
-      <input type="button" class="btn btn-warning letter" id="i-letter" value="i" />
-      <input type="button" class="btn btn-warning letter" id="j-letter" value="j" />
-      <input type="button" class="btn btn-warning letter" id="k-letter" value="k" />
-      <input type="button" class="btn btn-warning letter" id="l-letter" value="l" />
-      <input type="button" class="btn btn-warning letter" id="m-letter" value="m" />
-      <input type="button" class="btn btn-warning letter" id="n-letter" value="n" />
-      <input type="button" class="btn btn-warning letter" id="o-letter" value="o" />
-      <input type="button" class="btn btn-warning letter" id="p-letter" value="p" />
-      <input type="button" class="btn btn-warning letter" id="q-letter" value="q" />
-      <input type="button" class="btn btn-warning letter" id="r-letter" value="r" />
-      <input type="button" class="btn btn-warning letter" id="s-letter" value="s" />
-      <input type="button" class="btn btn-warning letter" id="t-letter" value="t" />
-      <input type="button" class="btn btn-warning letter" id="u-letter" value="u" />
-      <input type="button" class="btn btn-warning letter" id="v-letter" value="v" />
-      <input type="button" class="btn btn-warning letter" id="w-letter" value="w" />
-      <input type="button" class="btn btn-warning letter" id="x-letter" value="x" />
-      <input type="button" class="btn btn-warning letter" id="y-letter" value="y" />
-      <input type="button" class="btn btn-warning letter" id="z-letter" value="z" />
+      <input type="button" class="btn btn-info letter" id="a-letter" value="a" />
+      <input type="button" class="btn btn-info letter" id="b-letter" value="b" />
+      <input type="button" class="btn btn-info letter" id="c-letter" value="c" />
+      <input type="button" class="btn btn-info letter" id="d-letter" value="d" />
+      <input type="button" class="btn btn-info letter" id="e-letter" value="e" />
+      <input type="button" class="btn btn-info letter" id="f-letter" value="f" />
+      <input type="button" class="btn btn-info letter" id="g-letter" value="g" />
+      <input type="button" class="btn btn-info letter" id="h-letter" value="h" />
+      <input type="button" class="btn btn-info letter" id="i-letter" value="i" />
+      <input type="button" class="btn btn-info letter" id="j-letter" value="j" />
+      <input type="button" class="btn btn-info letter" id="k-letter" value="k" />
+      <input type="button" class="btn btn-info letter" id="l-letter" value="l" />
+      <input type="button" class="btn btn-info letter" id="m-letter" value="m" />
+      <input type="button" class="btn btn-info letter" id="n-letter" value="n" />
+      <input type="button" class="btn btn-info letter" id="o-letter" value="o" />
+      <input type="button" class="btn btn-info letter" id="p-letter" value="p" />
+      <input type="button" class="btn btn-info letter" id="q-letter" value="q" />
+      <input type="button" class="btn btn-info letter" id="r-letter" value="r" />
+      <input type="button" class="btn btn-info letter" id="s-letter" value="s" />
+      <input type="button" class="btn btn-info letter" id="t-letter" value="t" />
+      <input type="button" class="btn btn-info letter" id="u-letter" value="u" />
+      <input type="button" class="btn btn-info letter" id="v-letter" value="v" />
+      <input type="button" class="btn btn-info letter" id="w-letter" value="w" />
+      <input type="button" class="btn btn-info letter" id="x-letter" value="x" />
+      <input type="button" class="btn btn-info letter" id="y-letter" value="y" />
+      <input type="button" class="btn btn-info letter" id="z-letter" value="z" />
     </div>
     <label style="display: inline;" for="useKeyboardCheckbox">Allow keyboard input?</label>
     <input type="checkbox" class="info" id="useKeyboardCheckbox" />
